# nvlm

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  status.md
install/: nvlm.exp  nvlm.h  nvlm.lib
models/: clip-vit-base-patch16-textual-quint8.onnx  clip-vit-base-patch16-visual-quint8.onnx
src/: nvlm.cpp  nvlm.h  nvlm_impl.cpp  nvlm_impl.h
